[package]
name = "niwl-client"
description = "client implementation for a prototype system for open, decentralized, metadata resistant communication using fuzzytags and random ejection mixers"
license = "MIT"
repository = "https://git.openprivacy.ca/openprivacy/niwl"
version = "0.1.0"
authors = ["Sarah Jamie Lewis <sarah@openprivacy.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
niwl = {version="0.1.0", path="../niwl"}
fuzzytags = "0.6.0"
clap = "3.0.0-beta.2"
serde = {version="1.0.123", features=["derive"]}
serde_json = "1.0.61"
bincode = "1.3.1"
hex = "0.4.2"
base32 = "0.4.0"
reqwest = {version="0.11.0", features=["json"]}
tokio = "1.2.0"
