[package]
name = "niwl-server"
version = "0.1.0"
authors = ["Sarah Jamie Lewis <sarah@openprivacy.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
niwl = {path="../niwl"}
fuzzytags = "0.4.2"
rocket = "0.4.6"
rocket_contrib = {version="0.4.6", features=["sqlite_pool"]}
serde_json = "1.0.61"