[package]
name = "niwl-server"
description = "server implementation for a prototype system for open, decentralized, metadata resistant communication using fuzzytags and random ejection mixers"
license = "MIT"
repository = "https://git.openprivacy.ca/openprivacy/niwl"
version = "0.1.0"
authors = ["Sarah Jamie Lewis <sarah@openprivacy.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
niwl = {version="0.1.0", path="../niwl"}
fuzzytags = "0.6.0"
rocket = "0.4.10"
rocket_contrib = {version="0.4.6", features=["sqlite_pool"]}
serde_json = "1.0.61"
