[package]
name = "niwl"
version = "0.1.0"
authors = ["Sarah Jamie Lewis <sarah@openprivacy.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzytags = "0.4.2"
serde = {version="1.0.123", features=["derive"]}
serde_json = "1.0.61"
bincode = "1.3.1"
hex = "0.4.2"
base32 = "0.4.0"
rand = "0.7.3"
curve25519-dalek = {version="3.0.0",  features=["serde"]}
sha3 = "0.9.1"
reqwest = {version="0.11.0", features=["json"]}
secretbox = {version="0.1.2"}